--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\rosma\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=C:\\Users\\Tecnico\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
