--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jbcrypt-0.4.jar=libreria/jbcrypt-0.4.jar
+file.reference.jdatepicker-1.3.4.jar=libreria/jdatepicker-1.3.4.jar
 file.reference.mysql-connector-j-8.1.0.jar=libreria/mysql-connector-j-8.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.1.0.jar}:\
-    ${file.reference.jbcrypt-0.4.jar}
+    ${file.reference.jbcrypt-0.4.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
