--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.jar=${dist.dir}/Biblioteca.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.javax.mail.jar=libreria\\javax.mail.jar
 file.reference.jbcrypt-0.4.jar=libreria/jbcrypt-0.4.jar
 file.reference.jdatepicker-1.3.4.jar=libreria/jdatepicker-1.3.4.jar
 file.reference.mysql-connector-j-8.1.0.jar=libreria/mysql-connector-j-8.1.0.jar
@@ -43,7 +44,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.1.0.jar}:\
     ${file.reference.jbcrypt-0.4.jar}:\
-    ${file.reference.jdatepicker-1.3.4.jar}
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
